--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
     <h1>I'm Homi Gadhethariya.</h1>
     <p>
-    <h2><b>a web <span class="pro">pro</span>grammer.</b></h2>
+    <h2><b>a Web Developer.</b></h2>
     </p>
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
     <img src="images/mountain.png" alt="mountain-img">
